modify auth module
