# app/auth/views.py
@@ -1,7 +1,7 @@
 # -*- coding: utf-8 -*-
 from flask import jsonify, request, Blueprint
 
-from app.auth.utils import verify_email_and_password
+from app.auth.utils import verify_email_and_password, update_token_by_access_token
 
 
 app = Blueprint("auth API", __name__)
@@ -18,3 +18,13 @@ def login():
         jsonify({"error": True, "message": "email and password are required"}),
         400,
     )
+
+
+@app.route("/logout", methods=["POST"])
+def logout():
+    id_session = request.headers.get("idSession")
+    response = update_token_by_access_token(id_session)
+    print(response)
+    if response:
+        return jsonify({"error": False, "message": "user is logged out"}), 200
+    return jsonify({"error": True, "message": "idSession not found"}), 405
